# playwright-crewai-agents

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  RAG_TOOLS_GUIDE.md  README.md  SECURITY.md  app.py  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  run_healer_with_rag.py  save-auth.ts  scenarios_test_accounts.txt  setup.py
rag_storage/: chroma.sqlite3
sample_test_plans/: Salesforce_Account_Management_Test_Plan.md  Salesforce_CRM_Test_Plan.md  Salesforce_Navigation_Test_Plan.md  salesforce-navigation-test-plan.md  scenarios.txt  scenarios_smoke_test.txt
sample_tests/: 01_navigate-to-accounts-module-fixed.spec.ts  02_create-new-account-complete-fixed.spec.ts  02_view-recently-viewed-accounts-list.spec.ts  03_account-validation-missing-required-fixed.spec.ts  03_open-ledges-account.spec.ts  04_navigate-to-sales-module-fixed.spec.ts  04_view-account-details-about-section.spec.ts  05_create-new-lead-complete-fixed.spec.ts  05_edit-account-type-field-view-available-options.spec.ts  06_change-account-type-and-save.spec.ts  06_lead-validation-missing-required-fixed.spec.ts  07_home-page-navigation-fixed.spec.ts  07_navigate-to-home-using-sidebar.spec.ts  08_cross-module-navigation-fixed.spec.ts  09_session-state-management-fixed.spec.ts  navigate-accounts-verify-ledges.spec.ts  navigate-home-validate-key-elements.spec.ts  navigate-sales-verify-robert-anderson.spec.ts  salesforce-account-management-complete.spec.ts  salesforce-account-management-scenarios.spec.ts  salesforce-navigation-tests.spec.ts
src/: __init__.py
test_plan/: 20251116_101021_test-plan.md  20251119_161744_test-plan.md  20251119_163436_test-plan.md  20251119_164224_test-plan.md  20251119_173340_test-plan.md  20251119_174056_test-plan.md
tests/: seed.spec.ts  test.spec.ts  (+1 more)
(+22 files in other folders)
